# qqlib

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
include/glad/: glad.h
include/math/: qmath.h
include/qcore/: qcore.h
include/render/: camera.h  renderer.h  shader.h  window.h
include/shapes/: circle.h  rectangle.h  shape.h
shaders/: fragmentshader.glsl  lighting_fs.glsl  lighting_vs.glsl  vertexshader.glsl
src/: qcore.cpp
src/math/: etc.cpp  matrix.cpp  operators.cpp  qmath.cpp  vector.cpp
src/render/: camera.cpp  renderer-basic-shapes.cpp  renderer.cpp  shader.cpp  window.cpp
src/shapes/: circle.cpp  rectangle.cpp  shape.cpp  window.cpp
